fix edit button styling and alignment with del btn

--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -19,14 +19,13 @@ body {
       align-items: center;
     }
 
-    .a {
+    a {
       margin-right: 30px;
       font-family: 'Raleway';
       text-decoration: none;
       font-weight: 200;
       font-size: 18px;
     }
-
 
 
   }
@@ -126,5 +125,4 @@ body {
   .header-right-signup-link a:hover{
     background-color: #b266b2;
   }
-  
 }
